Use Database First to Scaffold Models
Use Database First to Scaffold Models

--- a/MVCWebFormSample/Web.config
+++ b/MVCWebFormSample/Web.config
@@ -63,4 +63,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="NorthwindEntities" connectionString="metadata=res://*/Models.MyDBModel.csdl|res://*/Models.MyDBModel.ssdl|res://*/Models.MyDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SEZ-RAC-08\SQLSRV2K19;initial catalog=Northwind;persist security info=True;user id=sa;password=pass@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
