Added new ADO.NET Entity Data Model
Added new ADO.NET Entity Data Model to  the project

--- a/MVCWebFormSample/Web.config
+++ b/MVCWebFormSample/Web.config
@@ -65,5 +65,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="NorthwindEntities" connectionString="metadata=res://*/Models.MyDBModel.csdl|res://*/Models.MyDBModel.ssdl|res://*/Models.MyDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SEZ-RAC-08\SQLSRV2K19;initial catalog=Northwind;persist security info=True;user id=sa;password=pass@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="NorthwindEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SEZ-RAC-08\SQLSRV2K19;initial catalog=Northwind;persist security info=True;user id=sa;password=pass@123;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
